testing/tests/ui/num-suffix.stderr
error: unknown integer suffix `x`
 --> <source attribute>:1:4
  |
       1 | {{ 0x0x }}
         |    ^ close to this token
         |
 --> tests/ui/num-suffix.rs:5:3
  |
5 | #[template(
  |   ^^^^^^^^

error: unknown float suffix `f127`
 --> <source attribute>:1:4
  |
       1 | {{ 0.0_f127 }}
         |    ^ close to this token
         |
  --> tests/ui/num-suffix.rs:12:3
   |
12 | #[template(
   |   ^^^^^^^^

error: unknown number suffix `u321`
 --> <source attribute>:1:4
  |
       1 | {{ 654u321 }}
         |    ^ close to this token
         |
  --> tests/ui/num-suffix.rs:19:3
   |
19 | #[template(
   |   ^^^^^^^^
